Mon Dec 24 04:04:12 2007  GOTOU Yuuzou  <gotoyuzo@notwork.org>

	* test/net/http/test_https.rb: should rescue LoadError.

Mon Dec 24 03:57:28 2007  Koichi Sasada  <ko1@atdot.net>

	* cont.c, vm.h: fix to support sparc machine.
	  a patch from Yusuke ENDOH <mame AT tsg.ne.jp>

Mon Dec 24 03:35:19 2007  Koichi Sasada  <ko1@atdot.net>

	* common.mk: remove additional "-".

Mon Dec 24 02:59:32 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_check_readable): should not fill fptr->enc always.
	  read-write IO (e.g. socket) does not work.  [ruby-dev:32685]

	* io.c (io_read_encoding): retrieve reading encoding.

	* io.c (prepare_getline_args): convert RS to external encoding. 

	* string.c (str_new_shared): was setting embedding flag of wrong
	  string object.  [ruby-dev:32685]

	* io.c (io_enc_str): should preserve default_external encoding.

	* io.c (appendline): should do multibyte aware RS search.

Mon Dec 24 02:06:35 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_f_open): documentation update.

	* io.c (rb_io_s_pipe): ditto.

	* io.c (io_fwrite): wrong encoding destination.

	* io.c (rb_io_external_encoding): should return the encoding of
	  the file reading.

	* io.c (rb_io_internal_encoding): should return the encoding of
	  read string.

Mon Dec 24 01:46:43 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_s_pipe): allow specifying read-side encoding.

	* io.c (io_enc_str): wrong encoding destination.

Mon Dec 24 01:03:17 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_comparable): comparison including broken
	  coderange strings do not consider encoding.

Mon Dec 24 00:57:15 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (open_key_args): IO direct methods (foreach, readlines,
	  read) now takes keyword argument: encoding, mode, open_args.

Mon Dec 24 00:52:15 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_s_read): encoding argument reverted.
